--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,7 @@ form {
   margin: 3vh;
   padding: 1vh;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
   border: 1px solid grey;
@@ -57,6 +57,10 @@ display: flex;
 flex-direction: row;
 }
 
+.click-link {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
 .jobList {
   border: 1px solid grey;
   margin: 3vw;
