--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,11 @@
 h1 {
   text-align: center;
-  margin: 10vh;
+  margin: 3rem;
 }
 
 form {
-  margin: 3vh;
-  padding: 1vh;
+  margin: 2rem;
+  padding: 1rem;
   display: flex;
   /* flex-direction: column; */
   justify-content: center;
@@ -19,7 +19,7 @@ nav {
 }
 
 input {
- margin: 1vw;
+ margin: 1rem;
 }
 
 a {
@@ -38,16 +38,20 @@ a {
   font-size: 2rem;
 }
 
+.CreateUser {
+  margin: 5rem;
+}
+
 .Navbar {
   font-size: 1.75rem;
-  padding: 5vh;
+  padding: 2rem;
   background-color: grey;
 }
 
 .UserList {
   height: 45vh;
-  margin: 10vh;
-  padding: 5vw;
+  margin: 5rem;
+  padding: 3rem;
   border: 1px solid grey;
   overflow: scroll;
 }
@@ -63,19 +67,19 @@ flex-direction: row;
 }
 .jobList {
   border: 1px solid grey;
-  margin: 3vw;
-  padding: 3vw;
+  margin: 5rem;
+  padding: 3rem;
 }
 
 .job {
-  margin: 1vh;
+  margin: 1rem;
   display: flex;
   justify-content: space-between;
 }
 
 .badge {
-  margin: 1vh;
-  padding: .5vh;
+  margin: .5rem;
+  padding: .75rem;
   border: 1px solid black;
   border-radius: 7px;
   background-color: blue;
@@ -89,31 +93,53 @@ flex-direction: row;
   overflow: scroll;
 } */
 
-.payment--container {
-  height: 25vh;
-  width: 25vw;
-  border: 1px solid black;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  float: right;
-}
-
 .container-complete-payment {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   border: 1px solid black;
-  margin: 2vh;
-  padding: 2vh;
-
+  margin: 2rem;
+  /* padding ; */
 }
 
 .staff--listCompleted {
-  padding: 2vh;
+  display: flex;
+  flex-direction: column;
+  margin: 2rem;
+  padding: 0 3rem;
   height: 35vh;
   width: 40vw;
   border: 1px solid black;
   overflow: scroll;
+}
 
+.payment--container {
+  height: 20rem;
+  width: 20rem;
+  margin: 2rem;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  float: right;
+}
+
+@media screen and (max-width: 900px) {
+  /* body{
+    background-color: blue;
+  } */
+
+  h1 {
+    margin: 1rem;
+  }
+  form{
+    flex-direction: column;
+  }
+
+  .container-complete-payment {
+    flex-direction: column;
+    height: 40vh;
+  }
+  
 }
