--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,14 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities;  */
 
 * {
   box-sizing: border-box;
   font-family:Georgia, 'Times New Roman', Times, serif;
+}
+
+body {
+  padding: 1rem;
 }
 
 h1 {
@@ -27,7 +31,7 @@ nav {
   justify-content: space-evenly;
 }
 nav > a {
-  color: white;
+  /* color: white; */
 }
 
 input {
@@ -39,6 +43,13 @@ a {
 }
 
 .Auth {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.Auth--container {
   /* height: 50vh; */
   /* margin: 0 3rem 3rem 3rem; */
   display: flex;
@@ -59,14 +70,14 @@ a {
   margin: 1.5rem;
 }
 
-/* .homepage--SVG {
+.homepage--SVG {
   width: 30%;
-} */
+}
 
 .Navbar {
   font-size: 1.75rem;
   padding: 2rem;
-  background-color: grey;
+  /* background-color: grey; */
 }
 
 .UserList {
@@ -211,7 +222,7 @@ flex-direction: row;
     float: none;
   }
   
-  .dropdown {
+  /* .dropdown {
     position: relative;
     display: inline-block;
     width: 100%;
@@ -237,6 +248,6 @@ flex-direction: row;
   ul {
     display: flex;
     flex-direction: column;
-  }
+  } */
 
 }
