--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,11 +5,12 @@
 * {
   box-sizing: border-box;
   font-family:Georgia, 'Times New Roman', Times, serif;
-  color: black;
+
 }
 
 body {
-  background-color: #93B1A6;
+  background-color: #005B41;  
+  color: black;
 }
 
 h1 {
@@ -30,18 +31,23 @@ form {
 nav {
   display: flex;
   justify-content: space-evenly;
+
 }
 nav > a {
-  color: #5C8374;
+  color: #a5a58d;
 }
 
-input {
+input, button {
  margin: 1rem;
+ box-shadow: 1px 1px 1px 1px grey;
+ border-radius: 5px;
+ border: none;
 }
 
 a {
   text-decoration: none;
 }
+
 .WelcomeHeader {
   background-image: url('./svg/wintery-sunburst.svg');
   background-size: cover;
@@ -52,6 +58,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: white;
 }
 
 .Auth--container {
@@ -82,7 +89,8 @@ a {
 .Navbar {
   font-size: 1.75rem;
   padding: 2rem;
-  background-color: black;
+  background-color: #0F0F0F;
+  border-radius: 1rem;
 }
 
 .UserList {
@@ -90,13 +98,14 @@ a {
   margin: 5rem;
   padding: 3rem;
   border: 1px solid grey;
-  border-radius: .5rem;
+  border-radius: 1rem;
   overflow: scroll;
   background-color: white;
 }
 
 .staffSearch {
-  background-color: #93B1A6;
+  background-color: #2a705f;
+  color: white;
 }
 
 .User > form {
@@ -114,10 +123,11 @@ background-color: #93B1A6 ;
   margin: 5rem;
   padding: 3rem;
   border: 1px solid grey;
-  border-radius: .5rem;
+  border-radius: 1rem;
 }
 
 .job {
+  font-size: 2rem;
   margin: 1rem;
   display: flex;
   justify-content: space-between;
@@ -127,19 +137,19 @@ background-color: #93B1A6 ;
   margin: .5rem;
   padding: .75rem;
   border: 1px solid black;
-  border-radius: .5rem;;
+  border-radius: 1rem;;
   background-color: #5C8374;
   color: white
 }
 
 .StaffListPending {
   border: 1px solid black;
-  border-radius: .5rem;
+  border-radius: 1rem;
   background-color: white;
 }
 
 .staffCompleted--container {
-  background-color: #5C8374;
+  background-color: #a5a58d;
   height: 60vh;
 }
 
@@ -149,12 +159,13 @@ background-color: #93B1A6 ;
   align-items: center;
   margin: 2rem;
   border: 1px solid black;
-  border-radius: .5rem;
+  border-radius: 1rem;
   /* padding ; */
 }
 
 .staff--listCompleted {
   background-color: white;
+  font-size: 1.25rem;
   display: flex;
   flex-direction: column;
   margin: 2rem;
@@ -162,8 +173,16 @@ background-color: #93B1A6 ;
   height: 20rem;
   width: 30rem;
   border: 1px solid black;
-  border-radius: .5rem;
+  border-radius: 1rem;
   overflow: scroll;
+}
+
+.staff--completed {
+}
+
+.staff--compleated{
+    margin: 1rem
+
 }
 
 .payment--container {
@@ -176,7 +195,7 @@ background-color: #93B1A6 ;
   align-items: center;
   justify-content: center;
   border: 1px solid black;
-  border-radius: .5rem;
+  border-radius: 1rem;
   float: right;
 }
 
@@ -226,45 +245,4 @@ background-color: #93B1A6 ;
     flex-direction: column;
     margin: 1rem;
   }
-
-  /* .staff--listCompleted {
-    height: 25rem;
-    width: 25rem;
-  } */
-
-  /* .payment--container {
-    height: 5rem;
-    width: 15rem;
-    padding: 2rem 0;
-    float: none;
-  } */
-  
-  /* .dropdown {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
-    z-index: 1;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-
-  nav > a {
-    color: black;
-  }
-  ul {
-    display: flex;
-    flex-direction: column;
-  } */
-
 }
