--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,3 @@
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities;  */
-
 * {
   box-sizing: border-box;
   font-family:Georgia, 'Times New Roman', Times, serif;
@@ -11,20 +7,19 @@
 }
 
 body {
-  background-color: #005B41;  
+  background-color: grey;
   color: black;
 }
 
 h1 {
   text-align: center;
-  margin: 3rem;
 }
 
 form {
   margin: 2rem;
   padding: 1rem;
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   border: 1px solid grey;
@@ -50,6 +45,8 @@ ul{
   list-style: none;
 }
 
+/* Landing Page */
+
 .WelcomeHeader {
   background-image: url('./svg/wintery-sunburst.svg');
   background-size: cover;
@@ -72,10 +69,6 @@ ul{
   align-items: center;
 }
 
-.WelcomeHeader {
-  font-size: 2rem;
-}
-
 .CreateUser {
   margin: 5rem;
 }
@@ -87,6 +80,8 @@ ul{
 .homepage--SVG {
   width: 30%;
 }
+
+/* Navbar */
 
 .Navbar {
   font-size: 1.75rem;
@@ -110,7 +105,7 @@ ul{
   position: relative;
   width: 24px;
 
-} /* Style span tag */
+} 
 
 .hamb-line::before,
 .hamb-line::after{
@@ -143,8 +138,8 @@ ul{
 }
 
 .Navbar--dropdown {
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     padding: 2rem;
     position: fixed;
     background-color: black;
@@ -154,6 +149,27 @@ ul{
     /* overflow: hidden; */
 
 }
+
+/*Profile View*/
+
+.profile--postedList, .profile--completedList{
+  background-color: white;
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: .5rem;
+}
+.profile--postedList h2 {
+  text-align: center;
+}
+.link--completed {
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: .5rem;
+  background-color: white;
+  text-align: center;
+}
+
+/* Staff Search */
 
 .UserList {
   height: 75vh;
@@ -181,20 +197,7 @@ background-color: #93B1A6 ;
   font-weight: bold;
 }
 
-.jobList {
-  margin: 5rem;
-  padding: 3rem;
-  border: 1px solid grey;
-  border-radius: 1rem;
-}
-
-.job {
-  font-size: 2rem;
-  margin: 1rem;
-  display: flex;
-  justify-content: space-between;
-}
-
+/* Notification Badge*/
 .badge {
   margin: .5rem;
   padding: .75rem;
@@ -204,107 +207,6 @@ background-color: #93B1A6 ;
   color: white
 }
 
-.StaffListPending {
-  border: 1px solid black;
-  border-radius: 1rem;
+.profile--addJobForm {
   background-color: white;
-}
-
-.staffCompleted--container {
-  background-color: #a5a58d;
-  height: 60vh;
-}
-
-.container-complete-payment {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  margin: 2rem;
-  border: 1px solid black;
-  border-radius: 1rem;
-  /* padding ; */
-}
-
-.staff--listCompleted {
-  background-color: white;
-  font-size: 1.25rem;
-  display: flex;
-  flex-direction: column;
-  margin: 2rem;
-  padding: 0 3rem;
-  height: 20rem;
-  width: 30rem;
-  border: 1px solid black;
-  border-radius: 1rem;
-  overflow: scroll;
-}
-
-.staff--completed {
-}
-
-.staff--compleated{
-    margin: 1rem
-
-}
-
-.payment--container {
-  height: 20rem;
-  width: 20rem;
-  margin: 2rem;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid black;
-  border-radius: 1rem;
-  float: right;
-}
-
-.profile--addJob {
-  background-color: white;
-}
-
-@media screen and (max-width: 700px) {
-  html{
-    /* background-color: blue; */
-    font-size: .75rem;
-  }
-
-  h1 {
-    margin: 1rem;
-  }
-
-  form{
-    flex-direction: column;
-  }
-
-  .homepage--SVG {
-    width: 40%;
-  }
-  .CreateUser {
-    margin: 1rem;
-  }
-
-  .click-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 1rem;
-  }
-
-  .jobList {
-    margin: 1rem;
-    padding: 1rem;
-    background-color: white;
-  }
-
-  .StaffListPending > h2 {
-    text-align: center;
-  }
-
-  .container-complete-payment {
-    flex-direction: column;
-    margin: 1rem;
-  }
 }
