--- a/client/src/App.css
+++ b/client/src/App.css
@@ -138,8 +138,8 @@ ul{
 }
 
 .Navbar--dropdown {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     padding: 2rem;
     position: fixed;
     background-color: black;
