--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,6 +11,11 @@ body {
   color: black;
 }
 
+header {
+  margin: 2rem;
+}
+
+
 h1 {
   text-align: center;
 }
@@ -127,7 +132,7 @@ ul{
   display: none;
 }
 
-.Navbar--header > h1 {
+.Navbar--header > h3 {
   padding: 1rem;
 }
 
@@ -146,12 +151,12 @@ ul{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    
     /* overflow: hidden; */
 
 }
 
 /*Profile View*/
-
 .profile--postedList, .profile--completedList{
   background-color: white;
   margin: 1rem;
@@ -169,6 +174,20 @@ ul{
   text-align: center;
 }
 
+/* Jobs View */
+.availableJobList {
+  background-color: white;
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: .5rem;
+}
+
+.availableJob {
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem;
+  
+}
 /* Staff Search */
 
 .UserList {
