--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,18 +35,24 @@ nav > a {
   color: #a5a58d;
 }
 
-input, button {
+input {
  margin: 1rem;
  box-shadow: 1px 1px 1px 1px grey;
  border-radius: 5px;
  border: none;
 }
 
-a{
+button {
+  margin: .5rem;
+  padding: .25rem;
+  border-radius: .5rem;
+}
+
+a {
     text-decoration: none;
 }
 
-ul{
+ul {
   list-style: none;
 }
 
@@ -146,7 +152,7 @@ ul{
     width: 100vw;
     height: auto;
     padding: 2rem;
-    position: sticky;
+    position: absolute;
     background-color: black;
     display: flex;
     flex-direction: column;
@@ -176,6 +182,8 @@ ul{
 
 /* Jobs View */
 .availableJobList {
+  max-height: 75vh ;
+  overflow: scroll;
   background-color: white;
   margin: 1rem;
   padding: 1rem;
