--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,12 +7,15 @@
 }
 
 body {
-  background-color: rgb(199, 199, 199);
-  color: black;
+  background-color: rgb(193, 193, 193);
+  color: rgb(0, 0, 0);
 }
 
 header {
   margin: 1rem;
+  background-color: rgba(255, 255, 255, 0.69);
+  padding: .25rem;
+  border-radius: 2rem;
 }
 
 
@@ -232,7 +235,8 @@ ul {
 .availableJobList {
   max-height: 75vh ;
   overflow: scroll;
-  background-color: white;
+   box-shadow: 0px 0px 10px 10px rgba(84, 84, 84, 0.25);
+  background-color: rgba(255, 255, 255, 0.659);
   margin: 1rem;
   padding: 1rem;
   border-radius: .5rem;
@@ -240,10 +244,22 @@ ul {
 
 .availableJob {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   margin: 1rem;
-  
+  padding: 1rem;
+  /* border-top: 1px solid rgba(0, 0, 0, 0.347); */
+  box-shadow: 0px 2px 5px  rgba(128, 128, 128, 0.489);
 }
+
+.availableJob ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
 /* Staff Search */
 
 .UserList {
