--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,7 @@
 
 body {
   background-color: rgb(193, 193, 193);
+  /* background-color: rgba(8, 0, 255, 0.751); */
   color: rgb(0, 0, 0);
 }
 
@@ -108,6 +109,8 @@ ul {
   font-size: 1.75rem;
   /* padding: 1rem; */
   background-color: rgba(255, 255, 255, 0.784);
+  /* background-color: rgba(8, 0, 255, 0.751); */
+  /* color: white; */
   position: sticky;
   top: 0;
   width: 100%;
@@ -167,6 +170,7 @@ ul {
     padding: 2rem;
     position: absolute;
     background-color: rgba(255, 255, 255, 0.784);
+    /* background-color: rgba(8, 0, 255, 0.5); */
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -190,8 +194,9 @@ ul {
   margin: 1rem;
   padding: 1rem;
   border-radius: .5rem;
-  box-shadow: 0px 0px 10px 10px rgb(84, 84, 84);
-  color: white;
+  box-shadow: 0px 0px 10px 10px rgba(84, 84, 84, 0.25);
+  background-color: rgba(255, 255, 255, 0.69);
+  color: rgb(0, 0, 0);
   text-align: center;
 }
 
@@ -257,7 +262,6 @@ ul {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-
 }
 
 /* Staff Search */
