--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,9 @@
 }
 
 body {
-  background-color: rgb(193, 193, 193);
+  background-image: url('./svg/wintery-sunburst.svg');
+  background-size: cover;
+  background-repeat: none;
   /* background-color: rgba(8, 0, 255, 0.751); */
   color: rgb(0, 0, 0);
 }
@@ -83,23 +85,32 @@ ul {
   padding: 1rem;
 }
 
+.leftTOright {
+  display: flex;
+  justify-content: space-between;
+}
+
 /* Landing Page */
 
-.WelcomeHeader {
-  background-image: url('./svg/wintery-sunburst.svg');
-  background-size: cover;
-  }
 
 .Auth {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: white;
+  /* color: white; */
 }
 
-.AuthForm {
-  
+.AuthFrom--inputs {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* color: white; */
+}
+
+.Auth--form {
+  display: flex;
+  flex-direction: column;
 }
 
 .Auth--container {
@@ -109,14 +120,17 @@ ul {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 1.5rem;
+  color :black
 }
 
 .CreateUser {
-  margin: 5rem;
+  margin: 2rem;
 }
 
 .test-instructions {
   margin: 1.5rem;
+  color: black;
 }
 
 .homepage--SVG {
@@ -124,13 +138,9 @@ ul {
 }
 
 /* Navbar */
-
 .Navbar {
   font-size: 1.75rem;
-  /* padding: 1rem; */
-  background-color: rgba(255, 255, 255, 0.784);
-  /* background-color: rgba(8, 0, 255, 0.751); */
-  /* color: white; */
+  background-color: rgba(255, 255, 255, 0.9);
   position: sticky;
   top: 0;
   width: 100%;
@@ -141,7 +151,7 @@ ul {
   cursor: pointer;
   float: right;
   padding: 40px 20px;
-}/* Style label tag */
+}
 
 .hamb-line {
   background: rgb(0, 0, 0);
@@ -149,7 +159,6 @@ ul {
   height: 2px;
   position: relative;
   width: 24px;
-
 } 
 
 .hamb-line::before,
@@ -189,18 +198,13 @@ ul {
     height: auto;
     padding: 2rem;
     position: absolute;
-    background-color: rgba(255, 255, 255, 0.784);
-    /* background-color: rgba(8, 0, 255, 0.5); */
+    background-color: rgba(255, 255, 255, 0.9);
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    
-    /* overflow: hidden; */
-
+    justify-content: space-evenly
 }
 
 /*Profile View*/
-
 .profile--postedList h2 {
   text-align: center;
 }
