--- a/client/src/App.css
+++ b/client/src/App.css
@@ -132,7 +132,9 @@ ul {
   position: sticky;
   top: 0;
   width: 100%;
-  max-height: 10vh;
+  height: 10%;
+  max-height: 17vh;
+
 }
 
 .hamb {
@@ -179,6 +181,10 @@ ul {
   justify-content: space-between;
   align-items: center;
   padding: 0 1rem;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  
 }
 
 .Navbar--dropdown {
