--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,6 +12,8 @@ body {
   background-repeat: none;
   /* background-color: rgba(8, 0, 255, 0.751); */
   color: rgb(0, 0, 0);
+  width: 100vw;
+  height: 100vh
 }
 
 header {
@@ -132,8 +134,8 @@ ul {
   position: sticky;
   top: 0;
   width: 100%;
-  height: 10%;
-  max-height: 17vh;
+  height: 5rem;
+  max-height: 15vh;
 
 }
 
