Mobile Good For Now

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -81,9 +81,12 @@ ul {
   justify-content: space-between;
 }
 
+.App {
+  height: 100%;
+  width :100%;
+}
+
 /* Landing Page */
-
-
 .Auth {
   display: flex;
   flex-direction: column;
