--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,6 +27,7 @@ header {
 
 
 h1 {
+  font-size: 2rem;
   text-align: center;
 }
 
@@ -40,6 +41,7 @@ nav > a {
 }
 
 input {
+  font-size: 1rem;
  margin: .5rem;
  padding: 0 1rem;
  box-shadow: 1px 1px 1px 1px grey;
@@ -140,7 +142,26 @@ ul {
   width: 100%;
   height: 5rem;
   max-height: 15vh;
+}
 
+.Navbar--header {
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.9);
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1rem;
+  height: 100%;
+}
+
+.Navbar--dropdown {
+    width: 100%;
+    height: auto;
+    padding: 2rem;
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.9);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly
 }
 
 .hamb {
@@ -180,28 +201,6 @@ ul {
 .Navbar--header > h3 {
   padding: .5rem;
 
-}
-
-.Navbar--header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 1rem;
-  display: flex;
-  align-items: center;
-  height: 100%;
-  
-}
-
-.Navbar--dropdown {
-    width: 100vw;
-    height: auto;
-    padding: 2rem;
-    position: absolute;
-    background-color: rgba(255, 255, 255, 0.9);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly
 }
 
 /*Profile View*/
@@ -259,7 +258,7 @@ justify-content: space-between;
 .availableJobList {
   max-height: 75vh ;
   overflow: scroll;
-   box-shadow: 0px 0px 10px 10px rgba(84, 84, 84, 0.25);
+  box-shadow: 0px 0px 10px 10px rgba(84, 84, 84, 0.25);
   background-color: rgba(255, 255, 255, 0.659);
   margin: 1rem;
   padding: 1rem;
@@ -317,7 +316,6 @@ text-align: center;
 .staff--completed {
   border-bottom: 2px solid rgb(255, 255, 255);
   border-top: 2px solid rgb(255, 255, 255);
-
   padding: 1rem;
   margin: 1rem;
   display: grid;
@@ -387,3 +385,58 @@ align-items: center;
   color: white;
 }
 
+@media screen and (min-width: 600px) and (min-height: 600px ) {
+  body {
+    font-size: 2rem;
+  }
+
+  input {
+    font-size: 2rem;
+  }
+
+  .App {
+    display: grid;
+    grid-template-columns: 15vw 1fr;
+  }
+
+  .Navbar {
+    grid-column: 1 / 2;
+    max-height: 100vh;
+    height: 100vh;
+    background-color: rgba(255, 255, 255, 0.9);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .App-Body {
+    grid-column: 2 / 3;
+  }
+
+
+  .Navbar--header {
+    display: none;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0 1rem;
+    height: 100%;
+  }
+   
+  .Navbar--dropdown {
+    width: 10vw;
+    height: 100%;
+    padding: 2rem;
+    position: absolute;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+  
+  
+
+  }
