--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,4 @@
+
 * {
   box-sizing: border-box;
   font-family:Georgia, 'Times New Roman', Times, serif;
@@ -42,12 +43,11 @@ nav > a {
 
 input {
   font-size: 1rem;
- margin: .5rem;
- padding: 0 1rem;
- box-shadow: 1px 1px 1px 1px grey;
- border-radius: 5px;
- border: none;
-
+  margin: .5rem;
+  padding: 0 1rem;
+  box-shadow: 1px 1px 1px 1px grey;
+  border-radius: 5px;
+  border: none;
 }
 
 button {
@@ -56,10 +56,6 @@ button {
   border-radius: .5rem;
   border: 1px solid rgb(0, 0, 0);
   box-shadow: 0px 0px 10px 10px white;
-}
-
-a {
-    text-decoration: none;
 }
 
 ul {
@@ -161,7 +157,7 @@ ul {
     background-color: rgba(255, 255, 255, 0.9);
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly
+    justify-content: space-evenly;
 }
 
 .hamb {
@@ -204,6 +200,12 @@ ul {
 }
 
 /*Profile View*/
+.profile--postedList {
+  overflow: scroll;
+  height: 45vh;
+
+}
+
 .profile--postedList h2 {
   text-align: center;
 }
@@ -353,13 +355,8 @@ text-align: center;
 
 /* Staff Search */
 .UserList {
-
-
-}
-
-.staffSearch {
-  /* background-color: #2a705f; */
-  /* color: white; */
+  overflow: scroll;
+  height: 80vh;
 }
 
 .User > form {
@@ -377,12 +374,18 @@ align-items: center;
 /* Notification Badge*/
 
 .badge {
-  margin: .5rem;
+  margin-left: .5rem;
   padding: .25rem;
   border: 1px solid black;
   border-radius: .5rem;;
   background-color: #000000;
   color: white;
+}
+
+@media screen and (min-width: 760px){
+  .Navbar {
+    padding: 10%;
+  }
 }
 
 @media screen and (min-width: 600px) and (min-height: 600px ) {
@@ -395,12 +398,15 @@ align-items: center;
   }
 
   .App {
-    display: grid;
+    /* display: grid;
     grid-template-columns: 15vw 1fr;
+    grid-auto-rows: auto; */
+    display: flex;
+    width: 100vw;
   }
 
   .Navbar {
-    grid-column: 1 / 2;
+    /* grid-column: 1 / 2; */
     max-height: 100vh;
     height: 100vh;
     background-color: rgba(255, 255, 255, 0.9);
@@ -408,35 +414,32 @@ align-items: center;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    align-items: center;
+    flex: 0 0 15vw
   }
 
-  .App-Body {
-    grid-column: 2 / 3;
+  .App-body {
+    flex: 1;
   }
 
 
   .Navbar--header {
     display: none;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 0 1rem;
-    height: 100%;
   }
    
   .Navbar--dropdown {
-    width: 10vw;
     height: 100%;
-    padding: 2rem;
+    padding: 0;
     position: absolute;
-    background-color: transparent;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-}
+  }
 
-  
+  .availableJobList {
+    max-height: 90vh ;
+  }
   
 
   }
