--- a/client/src/App.css
+++ b/client/src/App.css
@@ -382,7 +382,7 @@ align-items: center;
   color: white;
 }
 
-@media screen and (min-width: 760px){
+@media screen and (width: 768px) and (height: 1024px){
   .Navbar {
     padding: 10%;
   }
