--- a/client/src/App.css
+++ b/client/src/App.css
@@ -389,57 +389,66 @@ align-items: center;
 }
 
 @media screen and (min-width: 600px) and (min-height: 600px ) {
-  body {
-    font-size: 2rem;
+    body {
+      font-size: 2rem;
+    }
+
+    input {
+      font-size: 2rem;
+    }
+
+    .App {
+      /* display: grid;
+      grid-template-columns: 15vw 1fr;
+      grid-auto-rows: auto; */
+      display: flex;
+      width: 100vw;
+    }
+
+    .Navbar {
+      /* grid-column: 1 / 2; */
+      max-height: 100vh;
+      height: 100vh;
+      background-color: rgba(255, 255, 255, 0.9);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      align-items: center;
+      flex: 0 0 15vw
+    }
+
+    .App-body {
+      flex: 1;
+    }
+
+
+    .Navbar--header {
+      display: none;
+    }
+    
+    .Navbar--dropdown {
+      height: 100%;
+      padding: 0;
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+    }
+
+    .availableJobList {
+      max-height: 90vh ;
+    }
   }
 
-  input {
-    font-size: 2rem;
-  }
-
-  .App {
-    /* display: grid;
-    grid-template-columns: 15vw 1fr;
-    grid-auto-rows: auto; */
-    display: flex;
-    width: 100vw;
-  }
-
-  .Navbar {
-    /* grid-column: 1 / 2; */
-    max-height: 100vh;
-    height: 100vh;
-    background-color: rgba(255, 255, 255, 0.9);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    align-items: center;
-    flex: 0 0 15vw
-  }
-
-  .App-body {
-    flex: 1;
-  }
-
-
-  .Navbar--header {
-    display: none;
-  }
-   
-  .Navbar--dropdown {
-    height: 100%;
-    padding: 0;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-
-  .availableJobList {
-    max-height: 90vh ;
-  }
-  
+  @media screen and (min-width: 1500px) {
+    .App-body {
+      padding: 2rem
+    }
+    
+    .container {
+    
+    }
 
   }
