button padding adjust

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -447,8 +447,8 @@ align-items: center;
       padding: 2rem
     }
     
-    .container {
-    
+    button {
+      padding: 1rem 2rem;
     }
 
   }
